<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     
>
     <ScrollView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:id="@+id/scroller"
     >
          <LinearLayout
               android:id="@+id/entry_form"
               android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
          >
               <Button android:id="@+id/selectVehicle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/pick"
                    android:onClick="selectVehicle"
                    />
<!--android:digits="0123456789."
android:inputType="numberDecimal"
-->
               <EditText android:id="@+id/miles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/miles"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    />
               <EditText android:id="@+id/gallons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/gallons"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    />
               <EditText android:id="@+id/cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/cost"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    />
               <Button android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:onClick="showDatePicker"
                    />
               <Button android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/save"
                    android:onClick="saveMileageData"
                    />
               <TextView android:id="@+id/status"
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content"
               />           
          </LinearLayout>
     </ScrollView>
</RelativeLayout>
